# CompuCell3D

./: .gitignore  GPUEnabled.h
CompuCell3D/: CMakeLists.txt
CompuCell3D/core/CompuCell3D/: CMakeLists.txt  CudaUtils.cu  CudaUtils.cuh  mainSimple.cpp  mainSimpleDemo.cpp
CompuCell3D/core/CompuCell3D/Automaton/: CMakeLists.txt
CompuCell3D/core/CompuCell3D/Boundary/: BoundaryStrategy.cpp  BoundaryStrategy.h  CMakeLists.txt
CompuCell3D/core/CompuCell3D/CudaUtils/: CudaManagedClass.cuh  CudaUtils.h
CompuCell3D/core/CompuCell3D/Field3D/: AdjacentNeighbor.h  Array3D.h  CC3D_Field3D.h  CMakeLists.txt  Field3D.h  Field3DImpl.cu  Field3DImpl.cuh  WatchableField3D.h
CompuCell3D/core/CompuCell3D/Potts3D/: CMakeLists.txt  Cell.h  CellInventory.h  Potts3D.cpp
CompuCell3D/core/CompuCell3D/steppables/CleaverMeshDumper/: CleaverMeshDumperProxy.cpp
CompuCell3D/core/CompuCell3D/steppables/PDESolvers/: AdvectionDiffusionSolverFE.cpp  DiffusionSolverFE.cpp  FastDiffusionSolver2DFE.cpp  FlexibleDiffusionSolverADE.cpp  FlexibleDiffusionSolverFE.cpp  FlexibleDiffusionSolverFE_GPU.hpp  FlexibleReactionDiffusionSolverFE.cpp  KernelDiffusionSolver.cpp  ReactionDiffusionSolverFE.cpp  ReactionDiffusionSolverFE_SavHog.cpp  SteadyStateDiffusionSolver.cpp  SteadyStateDiffusionSolver2D.cpp
CompuCell3D/core/CompuCell3D/steppables/PDESolvers/CUDA/: CUDAUtilsHeader.h  FlexibleDiffusionSolverFE_GPU_CUDA.cu
CompuCell3D/core/CompuCell3D/steppables/PDESolvers/candidate_code/: FiPySolver.cpp  ScalableFlexibleDiffusionSolverFE.cpp  SteadyStateDiffusionSolver2D.cpp.glt
CompuCell3D/core/PublicUtilities/: NumericalUtils.cpp
CompuCell3D/core/pyinterface/: CMakeLists.txt
CompuCell3D/core/pyinterface/CompuCellPython/: CompuCell.i
CompuCell3D/core/pyinterface/Fields/: Fields.i  Fields_post.i  Fields_pre.i
CompuCell3D/core/pyinterface/PlayerPythonNew/: CMakeLists.txt  FieldExtractor.cpp  FieldExtractor.h  FieldExtractor_CUDA.cu  FieldExtractor_CUDA.cuh  PlayerPython.i
cc3d/CompuCellSetup/: simulation_setup.py
cc3d/player5/Graphics/: PlotFrameWidget.py
