SET(SRCS
  Automaton.cpp
  CellType.cpp
  Transition.cpp
)

FIND_PACKAGE(CUDA)
FIND_PACKAGE(CUDAToolkit)
INCLUDE(FindCUDA)

if(${CMAKE_SYSTEM_NAME} STREQUAL Windows)
   ADD_STATIC_LIBRARY(Automaton ${SRCS} LINK_LIBRARIES CUDA::cudart ${CUDA_LIBRARIES})
else(${CMAKE_SYSTEM_NAME} STREQUAL Windows)
   ADD_SHARED_LIBRARY(Automaton ${SRCS} LINK_LIBRARIES CUDA::cudart ${CUDA_LIBRARIES})
endif(${CMAKE_SYSTEM_NAME} STREQUAL Windows)

TARGET_INCLUDE_DIRECTORIES(${AutomatonLib} PUBLIC
   $<BUILD_INTERFACE:${COMPUCELL3D_SOURCE_DIR}/core>
   $<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${COMPUCELL3D_INSTALL_INCLUDE_DIR}>
   /extra/alfuerst/cc3d_2022/include/
   ${CUDA_TOOLKIT_INCLUDE}
)

INSTALL_FILES(/${COMPUCELL3D_INSTALL_INCLUDE_DIR}/CompuCell3D/Automaton .h
  Automaton
  CellType
  Transition
  CC3D_Automaton
)
